--- a/.pylintrc
+++ b/.pylintrc
@@ -136,7 +136,8 @@ disable=print-statement,
         comprehension-escape,
         missing-docstring,
         trailing-whitespace,
-        fixme
+        fixme,
+		bad-continuation
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
