name_consistency: Add Lode Runner II.

--- a/name_consistency.ini
+++ b/name_consistency.ini
@@ -56,6 +56,7 @@ Galaga - Demons of Death = Galaga
 G-Sonic ~ Sonic Blast = Sonic Blast
 Ironman Ivan Stewart's Super Off-Road = Super Off-Road
 Ivan 'Ironman' Stewart's Super Off Road = Super Off-Road
+Lode Runner II - The Bungeling Strikes Back = Lode Runner II
 MegaMania - A Space Nightmare = MegaMania
 Metal Slug 2 - Super Vehicle-001/II = Metal Slug 2
 Metal Slug X - Super Vehicle-001 = Metal Slug X
