I don't feel like writing a sensible commit message
The only person who will ever want to know what I'm doing anyway is myself though so hahahahsgswrgnujdhaghfgd

--- a/name_consistency.ini
+++ b/name_consistency.ini
@@ -17,6 +17,7 @@ John Romero's Daikatana = Daikatana
 Mario Brothers = Mario Bros.
 Mega Man III = Mega Man 3
 Miner 2049'er = Miner 2049er
+Mortal Kombat 2 = Mortal Kombat II
 OutRun = Out Run
 Pacman = Pac-Man
 Pac Man = Pac-Man
@@ -69,6 +70,7 @@ Parodius - Shinwa kara Owarai e = Parodius
 Pitfall II - Lost Caverns = Pitfall II
 Pitfall II - The Lost Caverns = Pitfall II
 Pitfall! - Pitfall Harry's Jungle Adventure = Pitfall!
+Prince of Persia 2 - The Shadow and the Flame = Prince of Persia 2
 Puzzle Bobble 2 / Bust-A-Move Again = Puzzle Bobble 2
 Puzzle Bobble / Bust-A-Move = Puzzle Bobble
 Q*bert for Game Boy = Q*bert
