--- a/.pylintrc
+++ b/.pylintrc
@@ -137,7 +137,8 @@ disable=print-statement,
         missing-docstring,
         trailing-whitespace,
         fixme,
-		bad-continuation
+		bad-continuation,
+		wildcard-import
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
