You stupid twat

--- a/.pylintrc
+++ b/.pylintrc
@@ -80,7 +80,8 @@ disable=print-statement,
         trailing-whitespace,
         fixme,
 		bad-continuation,
-		wildcard-import
+		wildcard-import,
+		unused-wildcard-import
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
