name_consistency: Add Add Double Dragon 3 consistency.

--- a/name_consistency.ini
+++ b/name_consistency.ini
@@ -12,7 +12,8 @@ Chuck Norris - Super Kicks = Chuck Norris Superkicks
 Clay Fighter = ClayFighter
 Cosmo Gang the Video = Cosmo Gang - The Video
 Donkey Kong Junior = Donkey Kong Jr.
-Double Dragon 3 - The Rosetta Stone = Double Dragon III The Rosetta Stone
+Double Dragon 3 - The Rosetta Stone = Double Dragon III - The Rosetta Stone
+Double Dragon III The Rosetta Stone = Double Dragon III - The Rosetta Stone
 Final Fantasy 4 = Final Fantasy IV
 James Pond 2 - Codename RoboCod = James Pond II - Codename RoboCod
 James Pond II - Codename - Robocod = James Pond II - Codename RoboCod
