name_consistency: Add Smash TV.

--- a/name_consistency.ini
+++ b/name_consistency.ini
@@ -35,6 +35,7 @@ Sangokushi 3 = Sangokushi III
 Sim Ant = SimAnt
 Sim City = SimCity
 Sim Earth = SimEarth
+Smash TV = Smash T.V.
 Super Boy 3 = Super Boy III
 Street Fighter II' = Street Fighter II
 Twin Bee = TwinBee
