--- a/.pylintrc
+++ b/.pylintrc
@@ -81,7 +81,8 @@ disable=print-statement,
         fixme,
 		bad-continuation,
 		wildcard-import,
-		unused-wildcard-import
+		unused-wildcard-import,
+		line-too-long,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
