--- a/name_consistency.ini
+++ b/name_consistency.ini
@@ -38,6 +38,7 @@ Sim Earth = SimEarth
 Smash TV = Smash T.V.
 Super Boy 3 = Super Boy III
 Street Fighter II' = Street Fighter II
+Teen Agent = TeenAgent
 Twin Bee = TwinBee
 Ultima 3 = Ultima III
 Where in the World is Carmen Sandiego? = Where in the World is Carmen Sandiego
