--- a/name_consistency.ini
+++ b/name_consistency.ini
@@ -28,6 +28,7 @@ Parodius DA! = Parodius
 Pitfall 2 = Pitfall II
 Puyo Puyo Tsuu = Puyo Puyo 2
 Q-Bert = Q*bert
+QBert = Q*bert
 #To be fair, this is just a technical restriction on filenames that isn't relevant when using a MAME display name
 Robotron - 2084 = Robotron 2084 
 Sangokushi 3 = Sangokushi III
