--- a/.pylintrc
+++ b/.pylintrc
@@ -3,7 +3,7 @@
 # A comma-separated list of package or module names from where C extensions may
 # be loaded. Extensions are loading into the active Python interpreter and may
 # run arbitrary code
-extension-pkg-whitelist=
+extension-pkg-whitelist=wx
 
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
@@ -92,6 +92,7 @@ disable=print-statement,
 		too-many-nested-blocks,
 		too-many-return-statements,
 		too-many-statements,
+		too-many-ancestors,
 		global-statement, #What the fuck is wrong with the global statement exactly anyway, fucking wankers
 
 
