Make a separate data folder to put stuff like that in

--- a/data/name_consistency.ini
+++ b/data/name_consistency.ini
@@ -1,4 +1,5 @@
 [Name Replacement]
+#TODO: Would prefer this file to be some better more structured format, anyway it needs redoing
 240p Test Suite GX = 240p Suite
 Arkanoid - Revenge of DOH = Arkanoid II - Revenge of Doh
 Arkanoid Revenge of DOH = Arkanoid II - Revenge of Doh
