Remove other stuff in name_consistency that isn't needed.

--- a/data/name_consistency.ini
+++ b/data/name_consistency.ini
@@ -7,22 +7,17 @@ Bad Lands = BadLands
 Battle Zone = Battlezone
 Block Out = Blockout
 Bomber Man = Bomberman
-Bubsy in - Claws Encounters of the Furred Kind = Bubsy in Claws Encounters of the Furred Kind
 Burger Time = BurgerTime
 Chuck Norris - Super Kicks = Chuck Norris Superkicks
 Clay Fighter = ClayFighter
 Donkey Kong Junior = Donkey Kong Jr.
-Double Dragon III The Rosetta Stone = Double Dragon III - The Rosetta Stone
-James Pond II - Codename - Robocod = James Pond II - Codename RoboCod
 John Romero's Daikatana = Daikatana
 Mario Brothers = Mario Bros.
 Miner 2049'er = Miner 2049er
 OutRun = Out Run
 Pacman = Pac-Man
-Pac Man = Pac-Man
 Parodius DA! = Parodius
 Puyo Puyo Tsuu = Puyo Puyo 2
-Q-Bert = Q*bert
 QBert = Q*bert
 #To be fair, this is just a technical restriction on filenames that isn't relevant when using a MAME display name
 Robotron - 2084 = Robotron 2084 
@@ -30,7 +25,6 @@ Sim Ant = SimAnt
 Sim City = SimCity
 Sim Earth = SimEarth
 Smash TV = Smash T.V.
-Street Fighter II' = Street Fighter II
 Teen Agent = TeenAgent
 Twin Bee = TwinBee
 Wolfenstein 3-D = Wolfenstein 3D
@@ -41,6 +35,7 @@ Goonies
 
 [Subtitle Removal]
 #TODO: Add subtitles instead where that makes more sense (matching against whole name)
+#Probably put this into a separate list in data/ mapping titles to full titles w/ subtitle
 After Burner Complete ~ After Burner = After Burner Complete
 Air-Sea Battle ~ Target Fun = Air-Sea Battle
 Art of Fighting / Ryuuko no Ken = Art of Fighting
