Hide fixme in pylint
This just creates clutter when there would otherwise be actual warnings and such, much better to use that tasks pane in VS Code to look at them

--- a/.pylintrc
+++ b/.pylintrc
@@ -78,6 +78,7 @@ disable=print-statement,
         round-builtin,
         missing-docstring,
         trailing-whitespace, #This is always wrong, seemingly
+        fixme, #This is better off used with other IDE tools that show stuff
 		#Stupid opinions on style that are for wankers, these are the Python of equivalent of annoying English teachers who spout bullshit like "you can't end a sentence with a preposition because I said so" and other prescriptivist bullshit
 		#Fuck off
 		wildcard-import,
