--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "python.pythonPath": "/usr/bin/python3",
     "python.linting.pylintUseMinimalCheckers": false,
-    "problems.autoReveal": false
+    "problems.autoReveal": false,
+    "editor.wordWrap": "on"
 }
