--- a/.pylintrc
+++ b/.pylintrc
@@ -95,6 +95,7 @@ disable=print-statement,
 		too-many-statements,
 		too-many-ancestors,
             too-many-boolean-expressions,
+            too-many-public-methods,
 		global-statement, #What the fuck is wrong with the global statement exactly anyway, fucking wankers
 
 
