--- a/data/name_consistency.ini
+++ b/data/name_consistency.ini
@@ -16,6 +16,7 @@ Mario Brothers = Mario Bros.
 Miner 2049'er = Miner 2049er
 OutRun = Out Run
 Pacman = Pac-Man
+Pac Man = Pac-Man
 Parodius DA! = Parodius
 Puyo Puyo Tsuu = Puyo Puyo 2
 QBert = Q*bert
